--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 768px) {
+  background-info: float-left;
+}
+.portrait {
+  padding-left: 30px;
+}
 .contact {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
 }
@@ -6,7 +12,4 @@
   text-align: center;
   list-style: none;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.background-info {
-  float: left;
 }
