This will add a linear gradient background to the jumbotron holding my photo and Title information.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
-@media screen and (max-width: 768px) {
-  background-info: float-left;
+.jumbotron {
+  background: rgb(85,85,83);
+  background: linear-gradient(0deg, rgba(85,85,83,0.6379326923076922) 0%, rgba(160,200,242,0.7733173076923077) 100%);
 }
 .portrait {
   padding-left: 30px;
