It will add cards for recent projects I have worked on.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
+
 .jumbotron {
   background: rgb(85,85,83);
   background: linear-gradient(0deg, rgba(85,85,83,0.6379326923076922) 0%, rgba(160,200,242,0.7733173076923077) 100%);
 }
 .portrait {
   padding-left: 30px;
+  padding-right: 30px;
 }
 .contact {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
