It will add the final featured projects that are shown on the portfolio page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,7 @@
   list-style: none;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.att-author {
+  list-style: none;
+  font-size: x-small;
+}
